doc<Thesis>: wrote the intro part, and sections
the first part about timeline, with develop and display the game

--- a/Theoretical/main.tex
+++ b/Theoretical/main.tex
@@ -1,6 +1,24 @@
 \documentclass{report}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
+\usepackage{titlesec}
+\usepackage{enumitem}
+% for nested enumration
+\setlist[enumerate,1]{label=\arabic*}
+\setlist[enumerate,2]{label=\theenumi.\arabic*}
+\setlist[enumerate,3]{label=\theenumii.\arabic*}
+\usepackage{listings}
+\usepackage{xcolor}
+\usepackage{realboxes} % needed for \Colorbox
+
+\usepackage{amsmath,amsfonts}
+
+\usepackage{listings}
+
+\usepackage{xcolor}
+
+\newcommand{\inlineCode}[1]{{\colorbox{lightgray}{#1}}} % Highlight text that has been added
+
 
 \begin{document}
 	
