doc<Thesis>: finished the timeline part, except ref to other chapters
mostly "what is neat" in the technologies part

--- a/Theoretical/Latex/main.tex
+++ b/Theoretical/Latex/main.tex
@@ -25,7 +25,8 @@
 %\usepackage{pythonhighlight}
 
 
-\setminted[python]{breaklines, framesep=2mm, fontsize=\footnotesize, numbersep=5pt, xleftmargin=\parindent}
+\setminted[python]{breaklines, framesep=2mm, fontsize=\footnotesize, numbersep=5pt, xleftmargin=20pt,linenos}
+\setminted[text]{breaklines, framesep=2mm, fontsize=\footnotesize, numbersep=5pt, xleftmargin=20pt,linenos}
 
 \hypersetup{
 	colorlinks=true,
