--- a/Theoretical/Latex/main.tex
+++ b/Theoretical/Latex/main.tex
@@ -1,29 +1,30 @@
-\documentclass{report}
+\documentclass{thesis-ekf}
+\usepackage{hyperref}
+%\usepackage[T1]{fontenc}
+%\PassOptionsToPackage{defaults=hu-min}{magyar.ldf}
+\usepackage[english]{babel}
+%\documentclass{report}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx} %include images
 \usepackage{listings}
 \usepackage{minted} %write code snippets
 \usepackage{tcolorbox} % border shade for inline code
 \usepackage{amsmath,amsfonts}
-\usepackage{titlesec} % make arpitary amound of nested header with numbers
+\usepackage{titlesec} % make arbitrary amound of nested header with numbers
 \usepackage{enumitem}
 
-\usepackage{hyperref}
+
 
 % for nested enumration
 \setlist[enumerate,1]{label=\arabic*}
 \setlist[enumerate,2]{label=\theenumi.\arabic*}
-\setlist[enumerate,3]{label=\theenumii.\arabic*}
+%\setlist[enumerate,3]{label=\theenumii.\arabic*}
 \setcounter{secnumdepth}{6}
 
 
 \graphicspath{ {./usedImages/} }
 
 % !TeX TXS-program:compile = txs:///pdflatex/[--shell-escape]
-
-
-%\usepackage{pythonhighlight}
-
 
 \setminted[python]{breaklines, framesep=2mm, fontsize=\footnotesize, numbersep=5pt, xleftmargin=20pt,linenos}
 \setminted[text]{breaklines, framesep=2mm, fontsize=\footnotesize, numbersep=5pt, xleftmargin=20pt,linenos}
@@ -33,12 +34,11 @@
 	linkcolor=blue,
 	filecolor=magenta,      
 	urlcolor=cyan,
-	pdftitle={Overleaf Example},
 	pdfpagemode=FullScreen,
 }
 
 
-\newtcbox{\myovalbox}{on line,colback=lightgray,boxrule=0pt,arc=2pt, boxsep=2pt,left=0pt,right=0pt,top=0pt,bottom=0pt}
+\newtcbox{\myovalbox}{on line,colback=lightgray,boxrule=0pt,arc=2pt, boxsep=2pt, left=0pt, right=0pt, top=0pt, bottom=0pt}
 \newcommand{\inlineCode}[1]{{\myovalbox{#1}}} % Highlight text that has been added
 
 
@@ -46,9 +46,12 @@
 
 \begin{document}
 	
-	\author{TeXstudio Team}
-	\title{Simple Book Example}
-	\date{January 2013}
+	\author{Ahmed Mohamed M. Mahfouz Gadalla}
+	\title{AI beats a game}
+	\institute{Institute of Mathematics and Informatics}
+	\supervisor{Dr. Kovásznai Gergely}
+	\city{Eger}
+	\date{April 2023}
 	
 	
 	\maketitle
@@ -66,13 +69,13 @@
 %	\chapter*{Acknowledgements}
 %	I want to thank...
 
-	\chapter{Introduction}
+
 	\include{./Chapters/1_Introduction}
 	
-	\chapter{Related work}
+
 	\include{./Chapters/2_RelatedWork}
 	
-	\include{./Chapters/3_Technologies}
+%	\include{./Chapters/3_Technologies}
 	
 	\include{./Chapters/4_Timeline}
 	
