doc<Thesis>: add the previous parts from .md to latex

--- a/Theoretical/Latex/main.tex
+++ b/Theoretical/Latex/main.tex
@@ -71,18 +71,17 @@
 
 
 	\include{./Chapters/1_Introduction}
-	
 
 	\include{./Chapters/2_RelatedWork}
 	
-%	\include{./Chapters/3_Technologies}
+	\include{./Chapters/3_Technologies}
 	
 	\include{./Chapters/4_Timeline}
 	
 	\chapter{Testing}
 	\include{./Chapters/5_Testing}
 	
-	\chapter{Summary}
+
 	\include{./Chapters/6_Summary}
 	
 	
