doc<Thesis>: finished theoretical part, will send it for revision

--- a/Theoretical/Latex/main.tex
+++ b/Theoretical/Latex/main.tex
@@ -1,7 +1,6 @@
 \documentclass{thesis-ekf}
 \usepackage{hyperref}
 %\usepackage[T1]{fontenc}
-%\PassOptionsToPackage{defaults=hu-min}{magyar.ldf}
 \usepackage[english]{babel}
 %\documentclass{report}
 \usepackage[utf8]{inputenc}
@@ -57,17 +56,11 @@
 	\maketitle
 	\tableofcontents
 	
-%	\chapter*{Abstract}
-%	Abstract goes here
-%	
-%	\chapter*{Dedication}
-%	To mum and dad
-%	
-%	\chapter*{Declaration}
-%	I declare that..
-%
-%	\chapter*{Acknowledgements}
-%	I want to thank...
+	\chapter*{Dedication}
+This journey of three years is coming to an end, but it didn't come to this point in the period of only these years. It is the sum of my life up until this point. This is why I want to thank, by far, my parents, \textbf{Amal Hady} and \textbf{Mohamed Mahfouz}. Always putting my priorities before theirs, being the important part of me, and making me the person I am today. Thanking my mom for taking care of me with all the characteristics (good and bad) in myself.  The idea of having an AI that beats the game is inspired from my dad winning over me when I was a child in racing games. I decided to make a game where I wouldn't have to touch the controller to get a higher score than him. From my heart, I thank both of you.
+	
+Now that the emotional part is over. There are people who shaped the programmer inside of me today, to the point where he is capable of developing the thesis that is in front of you, my classmates, and my supervisor, \textbf{Dr. Kovásznai Gergely}. His work with me through the studying period, sending emails for him back and forth, really can make it up to him. Not only by guiding me, but also by giving me the steps of what to do. 
+
 
 
 	\include{./Chapters/1_Introduction}
@@ -78,7 +71,7 @@
 	
 	\include{./Chapters/4_Timeline}
 	
-	\chapter{Testing}
+
 	\include{./Chapters/5_Testing}
 	
 
