doc<Thesis>: cite all external links

--- a/Theoretical/Latex/bibliography.bib
+++ b/Theoretical/Latex/bibliography.bib
@@ -10,3 +10,78 @@
 	version = {1},
 	year = {2023}
 }
+@online{Galactic_Arms_Race:_Research,
+	title = {Galactic Arms Race: Research},  
+	author =  {Kenneth O. Stanley,Erin Hastings and Derick Janssen, Fabian Moncada and William Bohm, Max Kruger and Ryan Lessard, Matt Enright},  
+	year = {2014},
+	url = {http://galacticarmsrace.blogspot.com/p/research.html}
+}
+
+@online{Python_Pong_AI_Tutorial_-_Using_NEAT,
+	title = {Python Pong AI Tutorial - Using NEAT},  
+	author = {Tech With Tim},  
+	year = {2022},
+	url = {https://youtu.be/2f6TmKm7yx0}
+}
+
+@online{A.I_Learns_to_Play_Soni_the_Hedgehog_-_NEAT_Explained,
+	title = {A.I. Learns to Play Sonic the Hedgehog - NEAT Explained},  
+	author = {Forrest Knight},  
+	year = {2020},
+	url = {https://www.youtube.com/watch?v=5RR1T_-zVws&t}
+}
+
+@Misc{PyGame,
+	author = {Pete Shinners},
+	title =  {PyGame},
+	url = {http://pygame.org/},
+	year = {2011}
+}
+@online{NEAT_Overview,
+	title = {NEAT Overview},  
+	author = {Allen W. Smith},  
+	year = {2020},
+	url = {https://neat-python.readthedocs.io/en/latest/neat_overview.html}
+}
+@online{Particles_-_Pygame_Tutorial,
+	title = {Particles - Pygame Tutorial},  
+	author = {DaFluffyPotato},  
+	year = {2020},
+	url = {https://www.youtube.com/watch?v=F69-t33e8tk}
+}
+
+@online{Supervised_vs_Unsupervised_vs_Reinforcement_Learning,
+	title = {Supervised vs Unsupervised vs Reinforcement Learning},  
+	author = {Intellipaat},  
+	year = {2022},
+	url = {https://intellipaat.com/blog/supervised-learning-vs-unsupervised-learning-vs-reinforcement-learning/}
+}
+@online{Weights_and_Biases,
+	title = {Weights and Biases},  
+	author = {AI Wiki},  
+	url = {https://machine-learning.paperspace.com/wiki/weights-and-biases}
+}
+@online{NEAT_Overview_-_Genomic_distance,
+	title = {NEAT Overview - Genomic distance},  
+	author = {Allen W. Smith},
+	year = {2020}, 
+	url = {https://neat-python.readthedocs.io/en/latest/glossary.html#term-genomic-distance}
+}
+@online{NEAT_Overview_-_Genome,
+	title = {NEAT Overview - Genome},  
+	author = {Allen W. Smith},
+	year = {2020}, 
+	url = {https://neat-python.readthedocs.io/en/latest/glossary.html#term-genome}
+}
+@online{NEAT_Overview_-_Glossary,
+	title = {NEAT Overview - Glossary},  
+	author = {Allen W. Smith},
+	year = {2020}, 
+	url = {https://neat-python.readthedocs.io/en/latest/glossary.html}
+}
+@online{Survive_Line_-_Ahmed_Mahfouz,
+	title = {Survive Line - ahmedmahfouz.me},  
+	author = {Ahmed Mahfouz},
+	year = {2023}, 
+	url = {http://ahmedmahfouz.me/?p=thesis}
+}
